Prevent logo from stretching on firefox (#1010)
Prevents latter navbar items from being pushed off the screen

--- a/zk-money/src/ui-components/components/inputs/navbar/navbar.module.scss
+++ b/zk-money/src/ui-components/components/inputs/navbar/navbar.module.scss
@@ -16,6 +16,7 @@
   align-items: center;
   flex-shrink: 0;
   line-height: 0;
+  width: 300px;
   cursor: pointer;
 }
 
